--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# additional files to ignore
+/.ipynb_checkpoints
+practice.ipynb
+index.html
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
